# NanoCBOR

./: .cirrus.yml  .clang-format  .clang-tidy  Makefile  README.md  annotated.html  classes.html  dir_07e58b6c67ef7dcc849297c71fddb34b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  meson.build  meson_options.txt  modules.html
.github/workflows/: compile.yml  lint.yml
d1/d32/: group__NanoCBOR.html
d7/d4b/: structnanocbor__value.html
da/d3c/: nanocbor_8h.html  nanocbor_8h_source.html
da/dbe/: group__nanocbor.html
db/d16/: config_8h.html  config_8h_source.html
dc/d06/: group__nanocbor__config.html
dd/dca/: structnanocbor__encoder.html
examples/: .clang-tidy  meson.build
examples/pretty-printer/: Makefile  main.c  meson.build
include/nanocbor/: config.h  ieee754.h  nanocbor.h
search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_2.js  variables_3.js
src/: decoder.c  encoder.c  ieee754.c  memory_buffer.c  meson.build
tests/: .clang-tidy  meson.build
tests/automated/: .clang-tidy  Makefile  main.c  meson.build  test.h  test_decoder.c  test_decoder_packed.c  test_encoder.c
tests/encode/: main.c  out.txt
tests/fuzz/: main.c
tests/vectors/: complex.json  float.json  integer.json  (+5 more)
(+1 files in other folders)
